hw06 move to orm